# svg_simplifier

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
.windsurf/: rules.md
benchmarks/: __init__.py  benchmark_simplifier.py
simplifier/: __init__.py  bezier.py  cli.py  geometry.py  optimizer.py  parser.py  svg_writer.py  transforms.py  utils.py
tests/: __init__.py  conftest.py  test_bezier.py  test_geometry.py  test_optimizer.py  test_parser.py  test_transforms.py  test_utils.py
